code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_cli_progress_header.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                     ECC                                    |
 +----------------------------------------------------------------------------+
   - Running commands


  Auto Drive > Ready: run cargo check  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                     ECC                                    |
 +----------------------------------------------------------------------------+
   - Running commands


  Auto Drive > Running cargo check... · Installed dependencies  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                     ECC                                    |
 +----------------------------------------------------------------------------+
   - Running commands


  Auto Drive > Running cargo check... · Installed dependencies  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
